Add dashboards list to API
